updated hadoop in docker